# fastapi2

./: .env  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
fastapi2/: main.py
tests/: test_fastapi2.py
