[tool.poetry]
name = "fastapi2"
version = "0.1.0"
description = ""
authors = ["Mark Ryan <mryan.dev@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.1"
FastAPI-SQLAlchemy = "^0.2.1"
pydantic = "^1.9.0"
alembic = "^1.7.6"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.5"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
